--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="passport photo..jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Janani M</h1>
             <p>Am BSC Computer science Student </p>
         </div>
@@ -180,7 +180,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="resume.jpg" class="download-button">Download resume</a>
+            <a href="resume..jpg" class="download-button">Download resume</a>
         </center>
         </div>
         
